# ice-ken

./: .commitlintrc.json  .copilot-commit-message-instructions.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  release.yml  semantic-pr.yml
data/: Thjordska-Gervigogn-VartolulausarKennitolur.xml  kennitala-without-checksum.json
docs/: about-kennitala.md  data-files.md  system-kennitala.md  vocabulary.md
examples/: README.md  loader_example.py  usage_example_output.txt  usage_examples.py
src/example_package/: __init__.py  placeholder.py
src/ice_ken/: __init__.py  kennitala.py  loaders.py
tests/: test_generation.py  test_kennitala.py  test_loader.py  test_properties.py
